communication between the inventory and order services.